feat: save and delete vibe poses

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - ./motivo:/app/motivo
       - ./webserver:/app/webserver
       - ./metamotivo-S-1-datasets:/app/metamotivo-S-1-datasets
+      - ./storage:/app/storage
     restart: unless-stopped
     deploy:
       resources:
